@@ -1,5 +1,5 @@
 
-  # cat=basic/11; type=user[EXT:tt_news/lib/class.tx_ttnews_tsparserext.php:tx_ttnews_tsparserext->displayMessage]; label=LLL:EXT:tt_news/locallang.xml:extmng.useStoragePid
+  # cat=basic/11; type=boolean; label=LLL:EXT:tt_news/locallang.xml:extmng.useStoragePid
 useStoragePid=1
 
   # cat=basic/enable/100; type=boolean; label=LLL:EXT:tt_news/locallang.xml:extmng.requireCategories
@@ -61,7 +61,8 @@ writeParseTimesToDevlog = 0
   # cat=basic/dev/161; type=input; label=LLL:EXT:tt_news/locallang.xml:extmng.parsetimeThreshold
 parsetimeThreshold = 0.1
 
-
+  # cat=basic/dev/1000; type=user[EXT:tt_news/lib/class.tx_ttnews_tsparserext.php:tx_ttnews_tsparserext->displayMessage]; label=LLL:EXT:tt_news/locallang.xml:extmng.updatermsgOption
+updateMessage=0
 
 
 
